# SoftRenderer

./: .clang-format  .gitignore  CMakeLists.txt  README.md  imgui.ini
include/: arcball_camera.h
include/asset_mgr/: Material.h  Mesh.h  Model.h  Texture.h
include/base/: Buffer.h  Camera.h  IShader.h  Input_Ctl.h  Light.h  Manager.h  Rasterizer.h  Scene.h
include/config/: Config.h  Key_Binding.h
include/math/: Mat_Op.h
include/utils/: Noncopyable.h  Singleton.h  check_gl.h  ticktock.h
include/viewer/: GL_Context.h  ImGui_Context.h
src/: main.cpp
src/asset_mgr/: Model.cpp  Texture.cpp
src/base/: Buffer.cpp  Camera.cpp  IShader.cpp  Input_Ctl.cpp  Light.cpp  Manager.cpp  Rasterizer.cpp  Scene.cpp
src/math/: Mat_Op.cpp
src/viewer/: GL_Context.cpp  ImGui_Context.cpp
